Added list of rankings

--- a/SmallDad/Views/Rank/Index.cshtml
+++ b/SmallDad/Views/Rank/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Ranks";
-
+    <h2>List of rankings</h2>
     @foreach (var rank in @Model)
     {
         <p>@rank.Title</p>
