--- a/SmallDad/Views/Rank/GetRank.cshtml
+++ b/SmallDad/Views/Rank/GetRank.cshtml
@@ -5,7 +5,8 @@
     <div class="card-body">
         <h5 class="card-title">@Model.Title</h5>
         <p class="card-text">@Model.Description</p>
-        <p class="card-text">Number of votes: @Model.Rating</p>
+        <p class="card-text">Num votes: @Model.NumVotes</p>
+        <p class="card-text">Rating: @Model.Rating</p>
         <p class="card-text">Current status: @Model.Verbal</p>
         <a asp-route-vote="1" class="btn btn-primary">+</a>
         <a asp-route-vote="-1" class="btn btn-primary">-</a>
