--- a/SmallDad/Views/Rank/Create.cshtml
+++ b/SmallDad/Views/Rank/Create.cshtml
@@ -1,11 +1,12 @@
-﻿<h2>Create new Rank</h2>
+﻿@model SmallDad.Dto.RankDto
+<h2>Create new Rank</h2>
 <form method="post">
     <div class="form-group">
-        <input type="text" class="form-control" id="title" aria-describedby="rankTitle" placeholder="Title">
+        <input asp-for="Title" type="text" class="form-control" aria-describedby="rankTitle" placeholder="Title">
         <small id="rankTitle" class="form-text text-muted">Keep it short and concise.</small>
     </div>
     <div class="form-group">
-        <input type="text" class="form-control" id="description" placeholder="Description">
+        <input asp-for="Description" type="text" class="form-control" placeholder="Description">
     </div>
     <button type="submit" class="btn btn-primary" asp-controller="Rank" asp-action="CreatePost">Create</button>
 </form>
