--- a/SmallDad/Views/Rank/Create.cshtml
+++ b/SmallDad/Views/Rank/Create.cshtml
@@ -1,12 +1,15 @@
 ﻿@model SmallDad.Dto.RankDto
 <h2>Create new Rank</h2>
-<form method="post">
+<form method="post" enctype="multipart/form-data">
     <div class="form-group">
         <input asp-for="Title" type="text" class="form-control" aria-describedby="rankTitle" placeholder="Title">
         <small id="rankTitle" class="form-text text-muted">Keep it short and concise.</small>
     </div>
     <div class="form-group">
         <input asp-for="Description" type="text" class="form-control" placeholder="Description">
+    </div>
+    <div class="form-group">
+        <input type="file" name="coverImage" class="form-control-file">
     </div>
     <button type="submit" class="btn btn-primary" asp-controller="Rank" asp-action="CreatePost">Create</button>
 </form>
