Show image dynamically on single rank page

--- a/SmallDad/Views/Rank/Create.cshtml
+++ b/SmallDad/Views/Rank/Create.cshtml
@@ -9,7 +9,7 @@
         <input asp-for="Description" type="text" class="form-control" placeholder="Description">
     </div>
     <div class="form-group">
-        <input type="file" name="coverImage" class="form-control-file">
+        <input asp-for="CoverImage" type="file" name="coverImage" class="form-control-file">
     </div>
     <button type="submit" class="btn btn-primary" asp-controller="Rank" asp-action="CreatePost">Create</button>
 </form>
