--- a/SmallDad/Views/Rank/GetRank.cshtml
+++ b/SmallDad/Views/Rank/GetRank.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SmallDad.Models.Rank
 
 <div class="card" style="width: 18rem;">
-    <img src="https://d2pa5gi5n2e1an.cloudfront.net/global/images/product/mobilephones/HUAWEI_P30_Pro/HUAWEI_P30_Pro_L_1.jpg" class="card-img-top" alt="@Model.Title">
+    <img src="@Model.CoverImgPath" class="card-img-top" alt="@Model.Title">
     <div class="card-body">
         <h5 class="card-title">@Model.Title</h5>
         <p class="card-text">@Model.Description</p>
