Typo fix in Comments model

--- a/SmallDad/Views/Rank/GetRank.cshtml
+++ b/SmallDad/Views/Rank/GetRank.cshtml
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="col-xs-12 col-lg-6">
-            List of comments
+            @Model.Comments.Count
         </div>
     </div>
 </div>
