--- a/SmallDad/Views/Profile/GetProfileById.cshtml
+++ b/SmallDad/Views/Profile/GetProfileById.cshtml
@@ -1,5 +1,5 @@
 ﻿@model SmallDad.Models.ApplicationUser
 
 <p>@Model.FirstName @Model.LastName</p>
-<p>@Model.Email</p>
+<p>@Model.UserName</p>
 <p>@Model.Biography</p>
