--- a/SmallDad/Views/Rank/GetRank.cshtml
+++ b/SmallDad/Views/Rank/GetRank.cshtml
@@ -17,6 +17,12 @@
             </div>
         </div>
         <div class="col-xs-12 col-lg-6">
+            @if (Model.Comments.Count == 0)
+            {
+                <h3>No one commented on this yet.</h3>
+                <p><a class="btn btn-primary" href="/Comment/Create">Leave a comment</a></p>
+            }
+
             @foreach (var comment in Model.Comments)
             {
                 <p>@comment.Content <a href="/Profile/@comment.Author.UserName">@comment.Author.UserName</a></p>
