--- a/SmallDad/Views/Comment/Index.cshtml
+++ b/SmallDad/Views/Comment/Index.cshtml
@@ -1,1 +1,7 @@
-﻿Comment here!
+﻿@model SmallDad.Dto.CreateCommentDto
+
+<form asp-action="post">
+    <div><textarea cols="50" rows="5" asp-for="@Model.Content"></textarea></div>
+    <input type="submit" value="Comment" />
+    <input type="hidden" value="@Model.RankId" />
+</form>
