Changed Dto to ViewModels

--- a/SmallDad/Views/Rank/Create.cshtml
+++ b/SmallDad/Views/Rank/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmallDad.Dto.RankDto
+﻿@model SmallDad.ViewModels.RankDto
 <h2>Create new Rank</h2>
 <form method="post" enctype="multipart/form-data">
     <div class="form-group">
