--- a/SmallDad/Views/Comment/_Index.cshtml
+++ b/SmallDad/Views/Comment/_Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmallDad.ViewModels.CreateCommentDto
+﻿@model SmallDad.ViewModels.CreateComment
 
 Leave a comment below...
 <form action="/Comment/@Model.RankId" method="post">
