--- a/SmallDad/Views/Comment/Create.cshtml
+++ b/SmallDad/Views/Comment/Create.cshtml
@@ -1,3 +1,3 @@
-﻿@model SmallDad.ViewModels.CommentCreatedViewModel
+﻿@model SmallDad.ViewModels.CommentCreated
 Comment was created!
 <a href="/Rank/@Model.RankId">Go back!</a>
