CreateCommentViewModel as parameter

--- a/SmallDad/Views/Comment/_Index.cshtml
+++ b/SmallDad/Views/Comment/_Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@model SmallDad.ViewModels.Comment.CreateCommentViewModel
 
 Leave a comment below...
-<form action="/Comment/@Model.RankId" method="post">
+<form action="/Comment/@Model.Id" method="post">
     <div><textarea cols="50" rows="5" asp-for="@Model.Content"></textarea></div>
     <input type="submit" value="Comment" />
-    <input type="hidden" value="@Model.RankId" />
+    <input type="hidden" value="@Model.Id" />
 </form>
