--- a/SmallDad/Views/Rank/GetRank.cshtml
+++ b/SmallDad/Views/Rank/GetRank.cshtml
@@ -22,7 +22,7 @@
                 <h3>No one commented on this yet.</h3>
             }
 
-            @await Html.PartialAsync("~/Views/Comment/_Index.cshtml", new SmallDad.ViewModels.Comment.CreateCommentViewModel() { RankId = Model.Id })
+            @await Html.PartialAsync("~/Views/Comment/_Index.cshtml", new SmallDad.ViewModels.Comment.CreateCommentViewModel() { Id = Model.Id })
 
             @foreach (var comment in Model.Comments)
             {
