--- a/SmallDad/Views/Comment/_Index.cshtml
+++ b/SmallDad/Views/Comment/_Index.cshtml
@@ -1,14 +1,14 @@
 ﻿@model SmallDad.ViewModels.Comment.CreateCommentViewModel
 
-Leave a comment below...
 <div class="form-group">
     <form asp-controller="Comment" asp-action="Create" asp-route-id="@Model.Id" method="post">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div>
-            <textarea cols="50" rows="5" asp-for="@Model.Content" class="form-control"></textarea>
+            <label asp-for="Content" class="control-label">Leave a comment below...</label>
+            <textarea cols="50" rows="5" asp-for="Content" class="form-control"></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Comment</button>
-        <input type="hidden" asp-for="@Model.Id" /><br />
-        <span asp-validation-for="@Model.Content" class="text-danger"></span>
+        <input type="hidden" asp-for="Id" /><br />
+        <span asp-validation-for="Content" class="text-danger"></span>
     </form>
 </div>
