--- a/SmallDad/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/SmallDad/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -41,6 +41,10 @@
                 <input asp-for="Input.Biography" class="form-control" />
                 <span asp-validation-for="Input.Biography" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Input.ProfilePhoto">Profile photo</label>
+                <input asp-for="Input.ProfilePhoto" type="file" name="coverImage" class="form-control-file">
+            </div>
             <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
         </form>
     </div>
