Profile photo upload WIP

--- a/SmallDad/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/SmallDad/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -9,7 +9,7 @@
 <partial name="_StatusMessage" for="StatusMessage" />
 <div class="row">
     <div class="col-md-6">
-        <form id="profile-form" method="post">
+        <form id="profile-form" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Username"></label>
@@ -42,8 +42,7 @@
                 <span asp-validation-for="Input.Biography" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.ProfilePhoto">Profile photo</label>
-                <input asp-for="Input.ProfilePhoto" type="file" name="coverImage" class="form-control-file">
+                <input asp-for="Input.ProfilePhoto" type="file" name="ProfilePhoto" class="form-control-file">
             </div>
             <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
         </form>
