--- a/SmallDad/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/SmallDad/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -42,7 +42,7 @@
                 <span asp-validation-for="Input.Biography" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input asp-for="Input.ProfilePhoto" type="file" name="ProfilePhoto" class="form-control-file">
+                <input asp-for="Input.ProfilePhoto" type="file" class="form-control" />
             </div>
             <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
         </form>
