Added ProfileViewModel to view

--- a/SmallDad/Views/Profile/GetProfileById.cshtml
+++ b/SmallDad/Views/Profile/GetProfileById.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmallDad.Models.ApplicationUser
+﻿@model SmallDad.ViewModels.Profile.ProfileViewModel
 
 <p>@Model.FirstName @Model.LastName</p>
 <p>@Model.UserName</p>
