Profile photo to view in dto

--- a/SmallDad/Views/Profile/GetProfileById.cshtml
+++ b/SmallDad/Views/Profile/GetProfileById.cshtml
@@ -1,5 +1,6 @@
 ﻿@model SmallDad.ViewModels.Profile.ProfileViewModel
 
+<img src="@Model.ProfilePhotoThumbPath" alt="Profile Photo" />
 <p>@Model.FirstName @Model.LastName</p>
 <p>@Model.UserName</p>
 <p>@Model.Biography</p>
