--- a/SmallDad/Views/Profile/GetProfileByUserName.cshtml
+++ b/SmallDad/Views/Profile/GetProfileByUserName.cshtml
@@ -1,5 +1,6 @@
-﻿@model SmallDad.Models.ApplicationUser
+﻿@model SmallDad.ViewModels.Profile.ProfileViewModel
 
+<img src="@Model.ProfilePhotoThumbPath" alt="Profile Photo" />
 <p>@Model.FirstName @Model.LastName</p>
 <p>@Model.UserName</p>
 <p>@Model.Biography</p>
