--- a/SmallDad/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/SmallDad/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -7,6 +7,7 @@
 
 <h4>@ViewData["Title"]</h4>
 <partial name="_StatusMessage" for="StatusMessage" />
+<img src="@Model.ProfilePhotoThumbPath" alt="Profile Photo" />
 <div class="row">
     <div class="col-md-6">
         <form id="profile-form" method="post" enctype="multipart/form-data">
