--- a/SmallDad/wwwroot/css/site.css
+++ b/SmallDad/wwwroot/css/site.css
@@ -54,3 +54,11 @@ body {
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
 }
+
+/*#region Profile Page*/
+.profile {}
+.profile--photo {
+    width: 128px;
+    height: 128px;
+}
+/*#endregion Profile Page*/
