profile photo class

--- a/SmallDad/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/SmallDad/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -8,7 +8,7 @@
 <h4>@ViewData["Title"]</h4>
 <partial name="_StatusMessage" for="StatusMessage" />
 <div class="profile">
-    <img class="profile--photo" src="@Model.ProfilePhotoThumbPath" alt="Profile Photo" />
+    <img class="profile__photo" src="@Model.ProfilePhotoThumbPath" alt="Profile Photo" />
     <div class="row">
         <div class="col-md-6">
             <form id="profile-form" method="post" enctype="multipart/form-data">
