--- a/SmallDad/Views/Shared/_LoginPartial.cshtml
+++ b/SmallDad/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,6 @@
 @using Microsoft.AspNetCore.Identity
-@inject SignInManager<ApplicationUser> SignInManager
-@inject UserManager<ApplicationUser> UserManager
+@inject SignInManager<SmallDad.Core.Entities.ApplicationUser> SignInManager
+@inject UserManager<SmallDad.Core.Entities.ApplicationUser> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
