--- a/SmallDad/Views/Rank/Create.cshtml
+++ b/SmallDad/Views/Rank/Create.cshtml
@@ -1,12 +1,19 @@
 ﻿@model SmallDad.ViewModels.Rank.RankViewModel
+@section Scripts {
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.11/jquery.validate.unobtrusive.min.js"></script>
+}
 <h2>Create new Rank</h2>
 <form method="post" enctype="multipart/form-data">
     <div class="form-group">
         <input asp-for="Title" type="text" class="form-control" aria-describedby="rankTitle" placeholder="Title">
         <small id="rankTitle" class="form-text text-muted">Keep it short and concise.</small>
+        <span asp-validation-for="Title" class="text-danger"></span>
     </div>
     <div class="form-group">
         <input asp-for="Description" type="text" class="form-control" placeholder="Description">
+        <span asp-validation-for="Description" class="text-danger"></span>
     </div>
     <div class="form-group">
         <input asp-for="CoverImage" type="file" name="coverImage" class="form-control-file">
