--- a/SmallDad/Views/Rank/GetRank.cshtml
+++ b/SmallDad/Views/Rank/GetRank.cshtml
@@ -13,6 +13,7 @@
                     <p class="card-text">Current status: @Model.Verbal</p>
                     <a asp-route-vote="1" class="btn btn-primary">+</a>
                     <a asp-route-vote="-1" class="btn btn-primary">-</a>
+                    <p>@Html.ValidationMessage("AlreadyVoted")</p>
                 </div>
             </div>
         </div>
